# budget-app-project

./: .gitignore  notes.md  package-lock.json  package.json  readme.md
client/: package-lock.json  package.json
client/src/: index.html  index.js
client/static/: 400.html  404.html  home.css  home.html  home.js  index.css  index.html  index.js
server/: .env  Cargo.toml  build.rs  knownbugs.md  package-lock.json  package.json
server-deprecated/: .env  package-lock.json  package.json
server-deprecated/src/: app.js  database.js  session.js
server-deprecated/src/routes/: index.js  user.js  users.js
server/src/: app.js  app.rs  auth.rs  budget.rs  database.js  db.rs  file_utils.rs  http_utils.rs  main.rs  metrics.rs  router.rs  server.rs
server/src/endpoints/: database.rs  files.rs  index.rs  mod.rs  users.rs
server/src/routes/: index.js  users.js
server/src/threads/: auth.rs  mod.rs  user_threads.rs
src/server/: app.js
src/server/data/: database.js
src/server/data/database/: users.db
src/server/routes/: users.js
